# Gallium-public

./: Dockerfile  README.md
click-confs/: lb-port.click  mazu-nat.click  proxy.click  simple_forward.click  switch.click
compiler/: CMakeLists.txt
compiler/exec/: example-codegen.cpp  example-hir.cpp  example-labeling.cpp  example-partition.cpp  find_push_elements.cpp  gallium.cpp  test-codegen.cpp  test-dpdkgen.cpp  test-p4-print.cpp  test-partition.cpp
compiler/include/: graph.hpp  hilvl-ir.hpp  hir-common-pass.hpp  hir-dpdkgen.hpp  hir-p4.hpp  hir-partition.hpp  hir-pktop.hpp  hir-stateop.hpp  llvm-helpers.hpp  llvm-incl.hpp  llvm-load.hpp  p4-ir.hpp  pkt-layout.hpp  utils.hpp
compiler/src/: hilvl-ir.cpp  hir-common-pass.cpp  hir-dpdkgen.cpp  hir-p4.cpp  hir-partition.cpp  hir-pktop.cpp  hir-stateop.cpp  llvm-helpers.cpp  llvm-load.cpp  p4-ir.cpp  pkt-layout.cpp  utils.cpp
compiler/test/: graph-test.cpp
examples/: myrewriter.cc  myrewriter.hh
extractor/: CMakeLists.txt  Makefile
extractor/exec/: compute-partitions.cpp  extract_paths.cpp  p4-print-test.cpp  parse_element_state.cpp  pipeline-test.cpp  process-click.cpp
extractor/include/: click-state.hpp  expr_tree.hpp  formatter.hpp  headerdef.hpp  inst_anno.hpp  llvm-incl.hpp  llvm-vartrace.hpp  opt-pass.hpp  p4-parser-common.hpp  pass-labeling.hpp  pass-llvm.hpp  pass-llvm2pipe.hpp  pass-p4gen.hpp  pass-pipe-common.hpp  pass-pipe-label.hpp  pass-pipe-oprw.hpp  pass-pipedep.hpp  pass-pipeline-p4gen.hpp  pass-pipeline.hpp  pass-preprocess.hpp  pass.hpp  pipeline-ir.hpp  placer.hpp  target-codegen.hpp  target-lang.hpp  target-p4.hpp  target-partition.hpp  utils.hpp
extractor/src/: click-state.cpp  formatter.cpp  headerdef.cpp  llvm-vartrace.cpp  opt-pass.cpp  p4-parser-common.cpp  pass-labeling.cpp  pass-llvm.cpp  pass-llvm2pipe.cpp  pass-p4gen.cpp  pass-pipe-common.cpp  pass-pipe-label.cpp  pass-pipe-oprw.cpp  pass-pipeline-p4gen.cpp  pass-pipeline.cpp  pass-preprocess.cpp  pass.cpp  pipeline-ir.cpp  placer.cpp  target-codegen.cpp  target-lang.cpp  target-p4.cpp  target-partition.cpp  utils.cpp
